kubernetes/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-nginx-deployment
  labels:
    app: resume
spec:
  replicas: 2
  selector:
    matchLabels:
      app: resume
  template:
    metadata:
      labels:
        app: resume
    spec:
          terminationGracePeriodSeconds: 45 # The total time allowed for graceful shutdown
          containers:
          - name: nginx-frontend
            image: my-ecr-repo-url/my-nginx-image:latest
            ports:
            - containerPort: 80
            lifecycle:
              preStop: # This hook executes before the container is terminated
                exec:
                  # This command tells Nginx to gracefully shut down.
                  # It stops accepting new connections but finishes current ones.
                  command: ["/usr/sbin/nginx", "-s", "quit"]
            livenessProbe:
              httpGet:
                path: /
                port: 80
              initialDelaySeconds: 15
              periodSeconds: 20
            readinessProbe:
              httpGet:
                path: /
                port: 80
              initialDelaySeconds: 5
              periodSeconds: 10
