kubernetes/dev/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-ip-service
spec:
  type: ClusterIP
  selector:
    app: site-pods
  ports:
    - port: 80
      targetPort: 80
