kubernetes/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:ACCOUNT_ID:certificate/CERTIFICATE_ID
spec:
  rules:
    - host: my.domain.com 
      http:
        paths:
          - path: /
            pathType: Prefix # Matches any URL path starting with '/'
            backend:
              service:
                name: resume-nginx-service # Name of your ClusterIP Service ?
                port:
                  number: 80 # Target port on  ClusterIP Service which routes to Nginx port 80
